--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@
 @import url("styles/rodapé.css");
 
 :root {
-    --cor-de-fundo: #EBECEE;
+    --cor-de-fundo: #ffffff;
     --branco: #FFFFFF;
-    --laranja: #EB9B00;
-    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --laranja: #0407d3;
+    --azul-degrade: linear-gradient(97.54deg, #355670 35.49%, #326589 165.37%);
     --fonte-principal: "Poppins";
     --azul: #002F52;
     --fonte-secundario: "Josefin Sans";
@@ -24,7 +24,6 @@ body {
     font-size: 16px;
     font-weight: 400;
 }
-
 .cabecalho__menu-hamburguer {
     width: 24px ;
     height: 24px;
@@ -57,7 +56,7 @@ body {
 
 .container__imagem {
     padding: 1em;
-    width: 13%;
+    width: 80%;
 }
 
 .lista-menu {
@@ -272,7 +271,7 @@ body {
 }
 
 .swiper-slide img {
-    width: 100%;
+    width: 50%;
 }
 
 .swiper-button-prev,
@@ -497,3 +496,4 @@ hr {
         padding: 3em 30vw;
     }
 }
+
